<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.7</version>
    <relativePath/> <!-- always resolve from repository -->
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <groupId>de.tomsit.dummy</groupId>
  <artifactId>exercises</artifactId>
  <version>1.0.0</version>

  <properties>
    <java.version>21</java.version>
    <spring.boot.version>3.5.7</spring.boot.version>
    <openapi.generator.version>7.8.0</openapi.generator.version>
  </properties>

  <dependencies>
    <!-- Spring Boot -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.18.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.5.0</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.20.0</version>
    </dependency>

    <!-- TEST SCOPE -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.github.glytching</groupId>
      <artifactId>junit-extensions</artifactId>
      <version>2.6.0</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <profiles>
    <profile>
      <id>common-infra</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <!-- we must have at least a) one plugin to append to argLine OR b) define it in order for @{argLine} is not causing "Error: could not open `{argLine}'" -->
        <argLine/>
        <!-- add properties here that are not so important in the main sections b/c they are not for customization in general but are needed for DRY and for the common setup to work -->
        <maven-surefire-plugin.argLine>
          <!-- disables logging of logback bootstrapping -->
          -Dlogback.statusListenerClass=ch.qos.logback.core.status.NopStatusListener
          <!-- disable WARNING 'Sharing is only supported for boot loader classes', ie: JVM class data sharing (CDS)  -->
          -Xshare:off
          <!-- disable WARNING: "A Java agent has been loaded dynamically", see https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3 -->
          -XX:+EnableDynamicAgentLoading
        </maven-surefire-plugin.argLine>
      </properties>
    </profile>
  </profiles>

  <build>
    <plugins>
      <!-- Spring Boot plugin -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <!-- must be config'ed, otherwise surefire/failsafe with not work with lombok causing spurious "compiler: symbol not found" -->
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <!-- Add generated sources -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>add-generated-sources</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <!-- gotcha: @{argLine} is handled internally by the plugin is not a common maven idiom, hence it cannot be added in the property -->
          <argLine>@{argLine} ${maven-surefire-plugin.argLine}</argLine>
          <useFile>false</useFile>
          <includes>
            <include>**/*Test.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>@{argLine} ${maven-surefire-plugin.argLine}</argLine>
          <useFile>false</useFile>
          <includes>
            <include>**/*IT.java</include>
          </includes>
        </configuration>
      </plugin>


    </plugins>


  </build>
</project>
